--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,10 @@ edition = "2024"
 minifb = "0.28.0"
 rand = "0.9.2"
 cpal = "0.16.0"
+
+[profile.release]
+codegen-units = 1
+lto = true
+opt-level = "s"
+panic = "abort"
+strip = true
